--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Galaxy Runner 2.0",
+  "name": "Galaxy Runner",
   "short_name": "GalaxyRunner",
   "start_url": ".",
   "display": "standalone",
