--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Galaxy Runner: Ultimate Chaos",
+  "name": "Galaxy Runner: Ultimate Chaos 2.0",
   "short_name": "GalaxyRunner",
   "start_url": "./index.html",
   "display": "standalone",
